Archive2/6e/52a38178464ba4/output
main.cpp:22:22: error: prototype for 'vec2<T, WindowSpace> SpaceConversions<T>::transform(vec2<T, MapSpace>)' does not match any in class 'SpaceConversions<T>'
 vec2<T, WindowSpace> SpaceConversions<T>::transform(vec2<T, MapSpace> in) {
                      ^
main.cpp:17:38: error: candidate is: template<class T> template<class CoordinateSpaceA, class CoordinateSpaceB> static vec2<T, CoordinateSpaceB> SpaceConversions<T>::transform(vec2<T, CoordinateSpaceA>)
     static vec2<T, CoordinateSpaceB> transform(vec2<T, CoordinateSpaceA> in);    
                                      ^
main.cpp:28:19: error: prototype for 'vec2<T, MapSpace> SpaceConversions<T>::transform(vec2<T, WindowSpace>)' does not match any in class 'SpaceConversions<T>'
 vec2<T, MapSpace> SpaceConversions<T>::transform(vec2<T, WindowSpace> in) {
                   ^
main.cpp:17:38: error: candidate is: template<class T> template<class CoordinateSpaceA, class CoordinateSpaceB> static vec2<T, CoordinateSpaceB> SpaceConversions<T>::transform(vec2<T, CoordinateSpaceA>)
     static vec2<T, CoordinateSpaceB> transform(vec2<T, CoordinateSpaceA> in);    
                                      ^
